# miranda-ng

./: .travis.yml  CMakeLists.txt
.github/workflows/: build.yml
libs/freeimage/: CMakeLists.txt
protocols/: CMakeLists.txt
protocols/Discord/: CMakeLists.txt
protocols/Dummy/: CMakeLists.txt
protocols/ICQ-WIM/: CMakeLists.txt
protocols/JabberG/: CMakeLists.txt
protocols/Steam/: CMakeLists.txt
src/mir_app/: CMakeLists.txt
