file(GLOB SOURCES "src/*.h" "src/api/*.h" "src/*.cpp" "res/*.rc")
set(TARGET Steam)
string(REPLACE "/EHsc" "" CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS})
include(${CMAKE_SOURCE_DIR}/cmake/plugin.cmake)
target_link_libraries(${TARGET} libjson)
set_target_properties(${TARGET} PROPERTIES COMPILE_FLAGS "/std:c++17")
add_subdirectory(proto_steam)